--- a/ztn/templates/index.html
+++ b/ztn/templates/index.html
@@ -8,10 +8,43 @@
     Please confirm the security policy and rule that will be sent to Junos Space Security Director.
     <hr />
 
-    {{srcaddr}}
-    <br />
-    {{srcport}}
-    <br />
+    {% if srcaddr %}
+    <table style="width:80%">
+        <tr>
+            <th>Field</th>
+            <th>Value</th>
+        </tr>
+        <tr>
+            <td>Source Address</td>
+            <td>{{ srcaddr }}</td>
+        </tr>
+        <tr>
+            <td>Source Port</td>
+            <td>{{ srcport }}</td>
+        </tr>
+        <tr>
+            <td>Destination Address</td>
+            <td>{{ destaddr }}</td>
+        </tr>
+        <tr>
+            <td>Destination Port</td>
+            <td>{{ destport }}</td>
+        </tr>
+        <tr>
+            <td>Service name</td>
+            <td>{{ servicename }}</td>
+        </tr>
+        <tr>
+            <td>Source zone</td>
+            <td>{{ srczone }}</td>
+        </tr>
+        <tr>
+            <td>Destination zone</td>
+            <td>{{ destzone }}</td>
+        </tr>
+    </table>
+    {% endif %}
+
     <form>
         Name: <input type="text" placeholder="Please enter a policy name." />
         <br />
