change width of table

--- a/ztn/templates/index.html
+++ b/ztn/templates/index.html
@@ -9,7 +9,7 @@
     <hr />
 
     {% if srcaddr %}
-    <table style="width:80%">
+    <table style="width:300px">
         <tr>
             <th>Field</th>
             <th>Value</th>
