--- a/ztn/templates/enrichment.html
+++ b/ztn/templates/enrichment.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Junos SD Enrichment Form</title>
-    <script src="{{ url_for('js', filename='enrichment.js') }}"></script>
+    <script src="/js/enrichment.js"></script>
 </head>
 
 <body>
