--- a/ztn/templates/enrichment.html
+++ b/ztn/templates/enrichment.html
@@ -15,64 +15,101 @@
     <label for="recommended">Use recommended values?</label>
 
     <form>
-        <label for="sourceaddr">Source address</label>
-        <select id="sourceaddr" onchange="onChangeSrcAddr()">
-            <option value='{{ srcaddr }}'>{{srcaddr}}</option>
-            <option id="src_subnet" value='{{ srcsubnet }}'>{{srcsubnet}}</option>
-            <input type="text" placeholder="CIDR" style="width:50px" id="src_cidr" disabled>
-        </select>
-        <br />
+        <table style="width:300px">
+            <tr>
+                <td>
+                    <label for="sourceaddr">Source address</label>
+                </td>
+                <td>
+                    <select id="sourceaddr" onchange="onChangeSrcAddr()">
+                        <option value='{{ srcaddr }}'>{{srcaddr}}</option>
+                        <option id="src_subnet" value='{{ srcsubnet }}'>{{srcsubnet}}</option>
+                        <input type="text" placeholder="CIDR" style="width:50px" id="src_cidr" disabled>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="sourceport">Source port</label>
+                </td>
+                <td>
+                    <select id="sourceport" onchange="onChangeSrcPort()">
+                        <option value='{{ srcport }}'>{{srcport}}</option>
+                        <option id="srcport_any" value='any'>any</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="sourceaddr">Destination address</label>
+                </td>
+                <td>
+                    <select id="destaddr" onchange="onChangeDestAddr()">
+                        <option value='{{ destaddr }}'>{{destaddr}}</option>
+                        <option id="dest_subnet" value='{{ destsubnet }}'>{{destsubnet}}</option>
+                        <input type="text" placeholder="CIDR" style="width:50px" id="src_cidr" disabled>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="destport">Destination port</label>
+                </td>
+                <td>
+                    <select id="destport" onchange="onChangeDestPort()">
+                        <option value='{{ destport }}'>{{destport}}</option>
+                        <option id="destport_any" value='any'>any</option>
+                    </select>
+                </td>
+            </tr>
 
-        <label for="sourceport">Source port</label>
-        <select id="sourceport" onchange="onChangeSrcPort()">
-            <option value='{{ srcport }}'>{{srcport}}</option>
-            <option id="srcport_any" value='any'>any</option>
-        </select>
-        <br />
+            <tr>
+                <td>
+                    <label for="srczone">Source zone</label>
+                </td>
+                <td>
+                    <select id="srczone" onchange="onChangeSrcZone()">
+                        <option value='{{ srczone }}'>{{srczone}}</option>
+                        <option id="srczone_any" value='any'>any</option>
+                    </select>
+                </td>
+            </tr>
 
-        <label for="sourceaddr">Destination address</label>
-        <select id="destaddr" onchange="onChangeDestAddr()">
-            <option value='{{ destaddr }}'>{{destaddr}}</option>
-            <option id="dest_subnet" value='{{ destsubnet }}'>{{destsubnet}}</option>
-            <input type="text" placeholder="CIDR" style="width:50px" id="src_cidr" disabled>
-        </select>
-        <br />
+            <tr>
+                <td>
+                    <label for="destzone">Destination zone</label>
+                </td>
+                <td>
+                    <select id="destzone" onchange="onChangeDestZone()">
+                        <option value='{{ destzone }}'>{{destzone}}</option>
+                        <option id="destzone_any" value='any'>any</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="username">Username</label>
 
-        <label for="destport">Destination port</label>
-        <select id="destport" onchange="onChangeDestPort()">
-            <option value='{{ destport }}'>{{destport}}</option>
-            <option id="destport_any" value='any'>any</option>
-        </select>
-        <br />
-
-        <label for="srczone">Source zone</label>
-        <select id="srczone" onchange="onChangeSrcZone()">
-            <option value='{{ srczone }}'>{{srczone}}</option>
-            <option id="srczone_any" value='any'>any</option>
-        </select>
-        <br />
-
-        <label for="destzone">Destination zone</label>
-        <select id="destzone" onchange="onChangeDestZone()">
-            <option value='{{ destzone }}'>{{destzone}}</option>
-            <option id="destzone_any" value='any'>any</option>
-        </select>
-        <br />
-
-        <label for="username">Username</label>
-        <select id="username" onchange="onChangeUsername()">
-            <option value='{{ username }}'>{{username}}</option>
-            <option id="username_group" value='group'>group</option>
-        </select>
-        <br />
-
-        <label for="application">Application</label>
-        <select id="application" onchange="onChangeApplication()">
-            <option value='{{ application }}'>{{application}}</option>
-            <option id="application_any" value='any'>any</option>
-        </select>
-        <br />
-
+                </td>
+                <td>
+                    <select id="username" onchange="onChangeUsername()">
+                        <option value='{{ username }}'>{{username}}</option>
+                        <option id="username_group" value='group'>group</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="application">Application</label>
+                </td>
+                <td>
+                    <select id="application" onchange="onChangeApplication()">
+                        <option value='{{ application }}'>{{application}}</option>
+                        <option id="application_any" value='any'>any</option>
+                    </select>
+                </td>
+            </tr>
+        </table>
     </form>
 
 </body>
