--- a/ztn/templates/index.html
+++ b/ztn/templates/index.html
@@ -6,7 +6,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="margin:4px;padding:4px;">
     Please confirm the security policy and rule that will be sent to Junos Space Security Director.
     <hr />
 
