--- a/ztn/templates/enrichment.html
+++ b/ztn/templates/enrichment.html
@@ -7,7 +7,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 
-<body style="margin:4px;padding:4px;">
+<body style="margin:4px;padding:4px">
     This page allows you to make changes to the fields automatically pulled from logs.
     <hr />
 
@@ -89,7 +89,6 @@
             <tr>
                 <td>
                     <label for="username">Username</label>
-
                 </td>
                 <td>
                     <select id="username" onchange="onChangeUsername()">
