--- a/ztn/templates/enrichment.html
+++ b/ztn/templates/enrichment.html
@@ -47,7 +47,7 @@
                     <select id="destaddr" onchange="onChangeDestAddr()">
                         <option value='{{ destaddr }}'>{{destaddr}}</option>
                         <option id="dest_subnet" value='{{ destsubnet }}'>{{destsubnet}}</option>
-                        <input type="text" placeholder="CIDR" style="width:50px" id="src_cidr" disabled>
+                        <input type="text" placeholder="CIDR" style="width:50px" id="dest_cidr" disabled>
                     </select>
                 </td>
             </tr>
