--- a/ztn/templates/index.html
+++ b/ztn/templates/index.html
@@ -57,7 +57,7 @@
         <form method="post" action="/?{{ qs }}">
             <button type="submit">Confirm</button>
         </form>
-        <form method="post" action="/enrichment?{{ qs }}">
+        <form action="/enrichment?{{ qs }}">
             <button>Display enrichments</button>
         </form>
     </div>
