wrong label fix custom rule/policy names

--- a/ztn/templates/enrichment.html
+++ b/ztn/templates/enrichment.html
@@ -135,7 +135,7 @@
             </tr>
             <tr>
                 <td>
-                    <label for="policy_name">Rule Name</label>
+                    <label for="rule_name">Rule Name</label>
                 </td>
                 <td>
                     <input name="rule_name" id="rule_name" type="text" placeholder="ZTN_ELK_RULE_12345">
