--- a/ztn/templates/index.html
+++ b/ztn/templates/index.html
@@ -37,7 +37,7 @@
         </tr>
         <tr>
             <td>Application</td>
-            {% if application is not '%{application}' %}
+            {% if application != "%{application}"" %}
             <td>{{ application }}</td>
             {% else %}
             <td>None</td>
