forgot other colon

--- a/ztn/templates/index.html
+++ b/ztn/templates/index.html
@@ -39,7 +39,7 @@
             <td>Application</td>
             {% if application != "%{application}"" %}:
             <td>{{ application }}</td>
-            {% else %}
+            {% else %}:
             <td>None</td>
             {% endif %}
         </tr>
