--- a/ztn/templates/index.html
+++ b/ztn/templates/index.html
@@ -37,9 +37,9 @@
         </tr>
         <tr>
             <td>Application</td>
-            {% if application != "%{application}" %}:
+            {% if application != "%{application}" %}
             <td>{{ application }}</td>
-            {% else %}:
+            {% else %}
             <td>None</td>
             {% endif %}
         </tr>
