nested_app and nested if/else

--- a/ztn/templates/index.html
+++ b/ztn/templates/index.html
@@ -38,7 +38,11 @@
         <tr>
             <td>Application</td>
             {% if application != "%{application}" %}
+            {% if nested_app != "%{nested_app}" %}
+            <td>{{ nested_app }}</td>
+            {% else %}
             <td>{{ application }}</td>
+            {% endif %}
             {% else %}
             <td>None</td>
             {% endif %}
