--- a/ztn/templates/index.html
+++ b/ztn/templates/index.html
@@ -37,12 +37,10 @@
         </tr>
         <tr>
             <td>Application</td>
-            {% if application != "%{application}" %}
             {% if nested_app != "%{nested_app}" %}
             <td>{{ nested_app }}</td>
-            {% else %}
+            {% elif application != "%{application}" %}
             <td>{{ application }}</td>
-            {% endif %}
             {% else %}
             <td>None</td>
             {% endif %}
