--- a/ztn/templates/index.html
+++ b/ztn/templates/index.html
@@ -37,7 +37,7 @@
         </tr>
         <tr>
             <td>Application</td>
-            {% if nested_application != "%{nested_app}" %}
+            {% if nested_app != "%{nested_app}" %}
             <td>{{ nested_app }}</td>
             {% elif application != "%{application}" %}
             <td>{{ application }}</td>
