--- a/ztn/templates/enrichment.html
+++ b/ztn/templates/enrichment.html
@@ -9,8 +9,14 @@
 
 <body style="margin:4px;padding:4px">
     This page allows you to make changes to the fields automatically pulled from logs.
-    <br/>If you'd like to upload a file with IPs, subnets, users/groups, and zones, you can upload a CSV file. Please follow the format:
-    <br/><code>subnets(CIDR), AD names, AD groups, zone names</code>
+    <br/>If you'd like to upload a file with IPs, subnets, users/groups, and zones, you can upload a YAML file. Please follow the format:
+    <br/><code>
+        ---
+        <br/>ad_groups: "one, two, three"
+        <br/>ad_names: "natzberg, sandeepr, tvmeter"
+        <br/>subnets: "192.15.12.0/24, 192.15.13.0/24, 192.15.14.0/24"
+        <br/>zones: "it, bus, corp"
+        </code>
     <hr />
 
     Upload new File
