--- a/ztn/templates/enrichment.html
+++ b/ztn/templates/enrichment.html
@@ -20,7 +20,7 @@
     <hr />
 
     Upload new File
-    <form method=post enctype=multipart/form-data>
+    <form method=post enctype='multipart/form-data'>
       <input type=file name=file>
       <input type=submit value=Upload>
     </form>
