--- a/ztn/templates/enrichment.html
+++ b/ztn/templates/enrichment.html
@@ -40,6 +40,11 @@
                         <option name="src_subnet" id="src_subnet" value='{{ srcsubnet }}'>{{srcsubnet}}</option>
                         <input type="number" placeholder="CIDR" style="width:50px" name="src_cidr" id="src_cidr"
                             disabled min="8" max="32">
+                        {% if subnets % }
+                            {% for subnet in subnets %}
+                            <option value='{{ subnet }}'>{{ subnet }}</option>
+                            {% endfor %}
+                        {% endif %}
                     </select>
                 </td>
             </tr>
