change example formatting

--- a/ztn/templates/enrichment.html
+++ b/ztn/templates/enrichment.html
@@ -12,10 +12,10 @@
     <br/>If you'd like to upload a file with IPs, subnets, users/groups, and zones, you can upload a YAML file. Please follow the format:
     <br/><code>
         ---
-        <br/>ad_groups: "one, two, three"
-        <br/>ad_names: "natzberg, sandeepr, tvmeter"
-        <br/>subnets: "192.15.12.0/24, 192.15.13.0/24, 192.15.14.0/24"
-        <br/>zones: "it, bus, corp"
+        <br/>ad_groups: one,two,three
+        <br/>ad_names: natzberg,sandeepr,tvmeter
+        <br/>subnets: 192.15.12.0/24,192.15.13.0/24,192.15.14.0/24
+        <br/>zones: it,bus,corp
         </code>
     <hr />
 
